--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+.title {
+    font-size: 0.5rem;
+    text-align: right;
+    height: 1vh;
+}
+
 .MuiContainer-root {
     margin: 0 auto;
     padding: 0!important;
@@ -12,7 +18,7 @@
 }
 
 .buttons-container {
-    height: 59vh!important;
+    height: 56vh!important;
     width: 100%!important;
 }
  .MuiButton-label {
